<resources>
    <string name="app_name">myArtGallery</string>
    <string name="app_subtitle">Thanks to artprice, artrank &amp; artfacts public records</string>
    <string name="action_search_artist">Search Artist</string>
    <string name="action_search_artwork">Search Artwork</string>
    <string name="action_search_event">Search Event</string>
    <string name="action_settings">Settings</string>
    <string name="err_parsing_server_response">Error: unable to parse server response</string>
    <string name="err_unexpected_object">Error: unexpected object received</string>
    <string name="err_unrecognized_base">Error: unknown database</string>
    <string name="err_unhandled_intent">Error: no application able to process this request</string>
    <string name="msg_auction">Auction</string>
    <string name="msg_by">by</string>
    <string name="msg_completed_on">Completed on</string>
    <string name="msg_expo">Exposition</string>
    <string name="msg_gallery_link">Gallery site link</string>
    <string name="msg_group_show">Group show</string>
    <string name="msg_lot_id">Lot ID</string>
    <string name="msg_mostly_sold">Mostly sold</string>
    <string name="msg_mostly_sold_in">Mostly sold in</string>
    <string name="msg_no_records_in_db">No records in this database</string>
    <string name="msg_no_records_matching_pattern">No records matching such pattern</string>
    <string name="msg_phone">Phone</string>
    <string name="msg_query_in_progress">Querying database&#8230;</string>
    <string name="msg_rank">Rank</string>
    <string name="msg_search">Search</string>
    <string name="msg_search_other_artworks">Search for artworks from this author</string>
    <string name="msg_search_related_artworks">Search for related artworks</string>
    <string name="msg_sell_tendency">Prices are globally</string>
    <string name="msg_show_in_gmaps">Show in GoogleMaps</string>
    <string name="msg_sold_in">Sold in</string>
    <string name="msg_sold_on">Sold on</string>
    <string name="msg_solo_show">Solo show</string>
    <string name="msg_started_on">Strated on</string>
    <string name="msg_the_date">The</string>
    <string name="msg_from_date">From</string>
    <string name="msg_to_date">to</string>
    <string name="msg_turnover">Turnover</string>
    <string name="msg_unrecognized_object_structure">Unrecognized object structure</string>
    <string name="title_activity_artist">Artist details</string>
    <string name="title_activity_artwork">Artwork details</string>
    <string name="title_activity_event">Event details</string>
    <string name="title_activity_search">Database Search</string>
    <string-array name="list_prices">
        <item name="hammer">Hammer price</item>
        <item name="highest">Highest price</item>
        <item name="lowest">Lowest price</item>
        <item name="premium">Price with premium</item>
    </string-array>
</resources>