<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".IndexActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/icon" />
    <TextView
        android:id="@+id/app_subtitle"
        android:text="@string/app_subtitle"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/app_icon" />
    <TextView
        android:id="@+id/searchArtist"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:layout_below="@id/app_icon"
        android:text="@string/action_search_artist"
        android:onClick="doSearchArtist" />
    <TextView
        android:id="@+id/searchArtwork"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:layout_below="@id/searchArtist"
        android:text="@string/action_search_artwork"
        android:onClick="doSearchArtwork" />
    <TextView
        android:id="@+id/searchEvent"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:layout_below="@id/searchArtwork"
        android:text="@string/action_search_event"
        android:onClick="doSearchEvent" />
    <TextView
        android:id="@+id/myApp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:layout_below="@id/searchEvent"
        android:text="@string/app_name"
        android:onClick="myArtGallery" />
</RelativeLayout>